# ogle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
apps/triangle/: CMakeLists.txt
apps/triangle/sources/: main.cc
libraries/: CMakeLists.txt
libraries/application/: CMakeLists.txt
libraries/application/includes/application/: application.h  glfw_application.h  ogle_application.h
libraries/application/sources/: application.cc  glfw_application.cc
libraries/config/: CMakeLists.txt
libraries/config/includes/config/: configuration.h  ogle_config.h
libraries/config/sources/: configuration.cc
libraries/engine/: CMakeLists.txt
libraries/engine/includes/engine/: engine.h  ogle_engine.h
libraries/engine/sources/: engine.cc
libraries/entity/: CMakeLists.txt
libraries/entity/includes/entity/: component.h  entity.h  ogle_entity.h
libraries/entity/sources/: entity.cc
libraries/file_system/: CMakeLists.txt
libraries/file_system/includes/file_system/: directory.h  file_path.h  ogle_file_system.h  text_file.h
libraries/file_system/sources/: directory.cc  file_path.cc  text_file.cc
libraries/geometry/: CMakeLists.txt
libraries/geometry/includes/geometry/: buffer.h  mesh.h  mesh_attributes.h  mesh_graph.h  mesh_loader.h  ogle_geometry.h  ray.h  transform.h  transform_matrix.h  transformation_matrix.h
libraries/geometry/sources/: mesh.cc  mesh_graph.cc  mesh_loader.cc  transform.cc  transform_matrix.cc  transformation_matrix.cc
libraries/includes/ogle/: ogle.h
libraries/input/: CMakeLists.txt
libraries/input/includes/input/: glfw_keyboard_input.h  keyboard_input.h  ogle_input.h
libraries/input/sources/: glfw_keyboard_input.cc  keyboard_input.cc
libraries/math/: CMakeLists.txt
libraries/math/includes/math/: angle.h  fp_comparison.h  matrix.h  ogle_math.h  quaternion.h  vector.h
libraries/math/sources/: angle.cc
libraries/memory/: CMakeLists.txt
libraries/memory/includes/memory/: buffer.h  ogle_memory.h
libraries/memory/sources/: buffer.cc
libraries/ogle/: CMakeLists.txt
libraries/ogle/application/: CMakeLists.txt
libraries/ogle/application/sources/: application.cc  glfw_application.cc
libraries/ogle/includes/ogle/: ogle.h
libraries/ogle/math/sources/: math.cc
libraries/ogle/util/: CMakeLists.txt
libraries/ogle/util/sources/: log.cc
libraries/ogle/window/: CMakeLists.txt
libraries/ogle/window/sources/: window.cc
libraries/renderer/: CMakeLists.txt
libraries/renderer/includes/renderer/: buffered_mesh.h  camera.h  glfw_buffered_mesh.h  glfw_mesh_renderer.h  glfw_renderer.h  glfw_window.h  glsl_shader.h  glsl_shader_program.h  mesh_renderer.h  ogle_renderer.h  perspective_camera.h  renderer.h  scene_graph.h  scene_renderer.h  shader.h  shader_program.h  (+1 more)
libraries/renderer/sources/: buffered_mesh.cc  camera.cc  glfw_buffered_mesh.cc  glfw_mesh_renderer.cc  glfw_renderer.cc  glfw_window.cc  glsl_shader.cc  glsl_shader_impl.cc  glsl_shader_program.cc  mesh_renderer.cc  perspective_camera.cc  renderer.cc  scene_graph.cc  scene_renderer.cc  shader.cc  shader_program.cc  window.cc
libraries/resource/: CMakeLists.txt
libraries/resource/sources/: resource.cc  resource_manager.cc  resource_metadata.cc  resource_registrar.cc
libraries/sources/: core.cc
libraries/std/: CMakeLists.txt
libraries/util/: CMakeLists.txt
libraries/util/sources/: blank.cc  string_utils.cc  text_file.cc
ogle/: CMakeLists.txt
ogle/includes/algorithms/: directed_graph.h  ogle_algorithms.h
ogle/includes/application/: application.h  ogle_application.h
ogle/includes/config/: configuration.h  ogle_config.h
ogle/includes/engine/: engine.h  ogle_engine.h
ogle/includes/entity/: component.h  entity.h  ogle_entity.h  property.h
ogle/includes/file_system/: directory.h  file_path.h  ogle_file_system.h  text_file.h  yaml_file.h
ogle/includes/geometry/: mesh.h  mesh_loader.h  mesh_processing.h  ogle_geometry.h  ray.h  transform.h  transformation_matrix.h
ogle/includes/input/: glfw_keyboard_input.h  keyboard_input.h  ogle_input.h
ogle/includes/math/: angle.h  fp_comparison.h  matrix.h  ogle_math.h  quaternion.h  vector.h
ogle/includes/memory/: buffer.h  ogle_memory.h
ogle/includes/ogle/: ogle.h
ogle/includes/renderer/: buffered_mesh.h  camera.h  glfw_buffered_mesh.h  glfw_mesh_renderer.h  glfw_window.h  glsl_shader.h  glsl_shader_program.h  light.h  material.h  mesh_renderer.h  ogle_renderer.h  opengl_primitive_types.h  perspective_camera.h  renderer.h  scene_graph.h  scene_renderer.h  shader.h  shader_program.h  shader_variable.h  window.h
ogle/includes/resource/: ogle_resource.h  resource.h  resource_manager.h  resource_metadata.h  resource_type.h
ogle/includes/std/: containers.h  custom_allocator.h  default_allocator.h  new_wrappers.h  ogle_std.inc
ogle/includes/time/: ogle_time.h  timer.h
ogle/includes/util/: blank.h  ogle_util.h  string_utils.h
ogle/includes/window/: glfw_window.h  ogle_window.h  window.h
ogle/math/: CMakeLists.txt
ogle/sources/application/: application.cc
ogle/sources/config/: configuration.cc
ogle/sources/engine/: engine.cc
ogle/sources/entity/: component.cc  entity.cc  property.cc
ogle/sources/file_system/: directory.cc  file_path.cc  text_file.cc  yaml_file.cc
ogle/sources/geometry/: mesh.cc  mesh_loader.cc  mesh_processing.cc  transform.cc  transformation_matrix.cc
ogle/sources/input/: glfw_keyboard_input.cc  keyboard_input.cc
ogle/sources/math/: angle.cc
ogle/sources/memory/: buffer.cc
ogle/sources/renderer/: buffered_mesh.cc  camera.cc  glfw_buffered_mesh.cc  glfw_mesh_renderer.cc  glsl_shader.cc  glsl_shader_program.cc  light.cc  material.cc  mesh_renderer.cc  opengl_primitive_types.cc  perspective_camera.cc  renderer.cc  resource_type.cc  scene_graph.cc  scene_renderer.cc  shader.cc  shader_program.cc  shader_variable.cc
ogle/sources/resource/: resource.cc  resource_manager.cc  resource_metadata.cc
ogle/sources/std/: ogle_std.cc
ogle/sources/time/: timer.cc
ogle/sources/util/: blank.cc  string_utils.cc
ogle/sources/window/: glfw_window.cc  window.cc
(+41 files in other folders)
