cmake_minimum_required(VERSION 3.3)

add_subdirectory(application)
add_subdirectory(config)
add_subdirectory(engine)
add_subdirectory(entity)
add_subdirectory(file_system)
add_subdirectory(geometry)
add_subdirectory(input)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(renderer)
add_subdirectory(resource)
add_subdirectory(std)
add_subdirectory(util)

add_subdirectory(ogle)
